--- a/package.json
+++ b/package.json
@@ -15,7 +15,19 @@
   },
   "homepage": "https://github.com/skypilotcc/optio#readme",
   "scripts": {
-    "test": "jest"
+    "all-ci-checks": "yarn run all-cq-checks && yarn run build",
+    "all-cq-checks": "yarn run typecheck && yarn run lint --quiet && yarn test",
+    "build": "rm -rf lib && yarn run compile-ts",
+    "ci": "yarn run all-ci-checks",
+    "compile-ts": "babel ./src --out-dir ./lib --extensions .ts --ignore '**/__tests__/*' --ignore '**/*.d.ts' && yarn run generate-typings",
+    "cq": "yarn run all-cq-checks",
+    "generate-typings": "tsc --project tsconfig.generate-typings.json",
+    "lint": "eslint --cache '**/*.{js,ts}'",
+    "prepublishOnly": "yarn run typecheck && yarn run lint --quiet && yarn test && yarn run build",
+    "publish:default": "yarn publish --non-interactive",
+    "tc": "yarn run typecheck",
+    "test": "jest",
+    "typecheck": "tsc"
   },
   "keywords": [
     "config",
@@ -25,5 +37,15 @@
     "settings",
     "utility",
     "tool"
-  ]
+  ],
+  "devDependencies": {
+    "@skypilot/toolchain": "^3.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "/lib"
+  ],
+  "types": "lib/index.d.ts"
 }
