--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "tool"
   ],
   "devDependencies": {
-    "@skypilot/toolchain": "^3.3.1"
+    "@skypilot/common-types": "^1.2.1",
+    "@skypilot/toolchain": "^3.3.1",
+    "@types/js-yaml": "^3.12.2",
+    "@types/lodash.get": "^4.4.6"
   },
   "publishConfig": {
     "access": "public"
@@ -47,5 +50,10 @@
   "files": [
     "/lib"
   ],
-  "types": "lib/index.d.ts"
+  "types": "lib/index.d.ts",
+  "dependencies": {
+    "@skypilot/sugarbowl": "^1.5.0",
+    "js-yaml": "^3.13.1",
+    "lodash.get": "^4.4.2"
+  }
 }
