--- a/.github/workflows/node-prerelease.yaml
+++ b/.github/workflows/node-prerelease.yaml
@@ -50,8 +50,32 @@ jobs:
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_READ_TOKEN" > .npmrc
           yarn install --frozen-lockfile --production=false
-          yarn add @skypilot/quick-release conventional-changelog-cli@2 finepack@2
+          yarn add @skypilot/quick-release conventional-changelog-cli@2 finepack@2 --production=false
           git checkout -- .
+      - name: Check types
+        if: success()
+        run: |
+          if [[ $(yarn --silent spqr-option 'prerelease.check-code') == 'true' ]] ; then
+            yarn run typecheck
+          fi
+      - name: Lint
+        if: success()
+        run: |
+          if [[ $(yarn --silent spqr-option 'prerelease.check-code') == 'true' ]] ; then
+            yarn run lint --no-cache --quiet
+          fi
+      - name: Test
+        if: success()
+        run: |
+          if [[ $(yarn --silent spqr-option 'prerelease.check-code') == 'true' ]] ; then
+            yarn test
+          fi
+      - name: Build
+        if: success()
+        run: |
+          if [[ $(yarn --silent spqr-option 'prerelease.build') == 'true' ]] ; then
+            yarn build
+          fi
       - name: Gather published versions
         run: |
           mkdir -p local
@@ -75,7 +99,7 @@ jobs:
             fi
           else
             echo "prerelease.publish = false. Skipping publication."
-            echo "To publish, set \`prerelease.publish: true\` in .skypilot/quick-release.yml."
+            echo "To publish, set \`prerelease.publish: true\` in .skypilot/quick-release.yaml."
           fi
       - name: Configure identity
         if: success()
