--- a/src/config/__tests__/primary/config.test.yaml
+++ b/src/config/__tests__/primary/config.test.yaml
@@ -1,5 +1,8 @@
 version: 1
 option1: option1-value
 option2: option2-value
+falsyBooleanOption: false
+falsyNumericOption: 0
+falsyStringOption: ''
 parentOption:
   nestedOption: 'nestedOption-value'
