feat: Can use & customize placeholder patterns `readConfigValue` now accepts an `ignorePattern` option; strings matching the pattern are treated as undefined

--- a/src/config/__tests__/primary/config.test.yaml
+++ b/src/config/__tests__/primary/config.test.yaml
@@ -4,5 +4,7 @@ option2: option2-value
 falsyBooleanOption: false
 falsyNumericOption: 0
 falsyStringOption: ''
+bracketedOption: '[value]'
+ignoredOption: '/* placeholder */'
 parentOption:
   nestedOption: 'nestedOption-value'
